partial resolution to layout issues moding button asnd starting next page and some animations

--- a/style.css
+++ b/style.css
@@ -362,31 +362,26 @@ padding-top: 2vh; /* Padding for spacing */
 
 }
 
+.projrctText {
+  font-size: 2rem; /* Responsive font size */
+  color: #ffd700;
+  margin-top: 1vh;
+  margin-bottom:-1vh;
+  text-decoration: none; /* Removes default underline */
+  cursor: pointer; /* Changes mouse cursor */
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
 .projectMenuBtns {
   display: flex;
   flex-direction: row;
   justify-content: center;
    gap:10vw; /* Space between buttons */
-  margin-top: -0.5vh;
+  margin-top: -1vh;
   margin-bottom: 0.5vh;
   
 }
-@media (max-width: 768px) {
-  .projectMenuBtns {
-    
-    gap: 2vw; /* Space between buttons */
-}
-.personal, .client, .collab {
 
-  font-size: 0.5rem; /* Font size for buttons */
-  height: 1.8rem; /* Button height */
-  width:fit-content; /* Button width */
-}
-.projectShell{
-padding:5px; /* Padding for spacing */
-}
- 
-}
 
 
 .personal, .client, .collab {
@@ -404,11 +399,32 @@ padding:5px; /* Padding for spacing */
  
 }
 
+
+
 .personal:hover, .client:hover, .collab:hover {
   border: #ffd700 solid 2px; /* Change border  on hover */
   color: #ffd700; /* Change text color on hover */
   transform: scale(1.05); /* Slightly enlarge on hover */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Add shadow on hover */
+}
+
+
+
+@media (max-width: 768px) {
+  .projectMenuBtns {
+    
+    gap: 2vw; /* Space between buttons */
+}
+.personal, .client, .collab {
+
+  font-size: 0.5rem; /* Font size for buttons */
+  height: 1.8rem; /* Button height */
+  width:fit-content; /* Button width */
+}
+.projectShell{
+padding:5px; /* Padding for spacing */
+}
+ 
 }
 
 .projectContainer {
@@ -457,7 +473,7 @@ padding:5px; /* Padding for spacing */
   .projectCard {
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 90%
   }
 }
 
